cabal-version:      3.0
name:               haskell-playground
version:            0.1.0.0
license:            NONE
author:             Miguel Luiz
maintainer:         122481365+miguelloq@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wno-unused-top-binds


executable haskell-playground
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
